--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
 
 </head>
+
 <body>
-    
-    <div class="container">
-        <nav>
-            <ul>
-              <li><strong><a href="{% url 'app' %}">SGM</a></strong></li>
-            </ul>
-            <ul>
-              <li>
-                <a href="{% url 'pacientes'  %}">Pacientes</a>
-            </li>
-              <!-- <li><a href="#">Link</a></li>
-              <li><a href="#" role="button">Button</a></li> -->
-            </ul>
-          </nav>
 
-        {% block content %}{% endblock %}
+  <div class="container">
+    <nav>
+      <ul>
+        <li><strong><a href="{% url 'app' id_clinica %}">SGM</a></strong></li>
+      </ul>
+      <ul>
+        <li>
+          <a href="{% url 'select_clinica'  %}">Seleccionar clínica</a>
+        </li>
+        <li>
+          <a href="{% url 'pacientes' id_clinica %}">Pacientes</a>
+        </li>
+        <!-- <li><a href="#">Link</a></li>-->
+        <li><a href="{% url 'account_logout' %}" role="button">Logout</a></li>
+      </ul>
+    </nav>
 
-    </div>
+    {% block content %}{% endblock %}
+
+  </div>
 </body>
+
 </html>
