--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -92,7 +92,7 @@
                 <h1>SGM</h1>
                 <h2>Software de Gestión Médica</h2>
             </hgroup>
-            <p><a href="{% url 'app' %}" role="button" >Ir a la app</a></p>
+            <p><a href="{% url 'select_clinica' %}" role="button" >Ir a la app</a></p>
         </header>
     </div>
     <!-- ./ Hero -->
